2012-02-15  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/impl/hmac/hmac_sha2.h: move
	hmac to a location that can reasonably be installed without
	conflict with other libraries [thanks Kail Frank]

2012-02-13 Lorenzo Natale <lorenzo.natale@iit.it>
    * src/libYARP_math/harness/MathTest.cpp
	  src/libYARP_sig/harness/MatrixTest.cpp
	  src/libYARP_sig/harness/VectorTest.cpp
	  src/libYARP_sig/include/yarp/sig/Matrix.h
	  src/libYARP_sig/include/yarp/sig/Vector.h
	  src/libYARP_sig/src/Matrix.cpp
	  src/libYARP_sig/src/Vector.cpp
 
    Modified Vector::resize() and Matrix::resize() to keep 
	old content when it exists 

2012-02-02  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/RosNameSpace.h: ROS does not
	allow ":" in node names, so we need to encode ":" characters
	in port names when registering them on a roscore instance.

	* src/libYARP_OS/src/PortCore.cpp (adminBlock): give semi-sensible
	responses to getPid and getBusInfo so "rosnode info /port" is
	happy.

	* src/carriers/xmlrpc_carrier/XmlRpcStream.cpp (read): getPid
	and getBusInfo are administrative messages

2012-01-27 Lorenzo Natale <lorenzo.natale@iit.it>
        * tagging 2.3.15

2012-01-26  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Companion.cpp (cmdName): bugfix - port 
	numbers in a "yarp name register ..." command were not being
	read correctly.

	* example/external/nameserver_proxy/main.cpp: demo of proxying
	queries to a foreign name server.  Useful for "yarp-without-yarp"
	applications on a system using the ROS name server 
	[thanks Zhenli Lu]

	* src/libYARP_name/include/yarp/name/all.h: commit missing catch-all
	file for name service.

	* src/doc/yarp_with_ros.dox: fix typo [thanks Zhenli Lu],
	"yarp read topic://chatter /read" -> "yarp read /read topic://chatter"

	* example/external/python/find_name_server.py: strip quote character

	* example/external/c/yarpmin.c: fix text-mode buffering
